# constallation-gpl

./: CMakeLists.txt  README.md  project_info.cmake
brainvisa/toolboxes/constellation/: constellation.py  lefranc.py  startup.py
brainvisa/toolboxes/constellation/hierarchies/brainvisa-3.1.0/: constellation_hie.py
brainvisa/toolboxes/constellation/hierarchies/brainvisa-3.2.0/: constellation_hie.py  diffusion.py
brainvisa/toolboxes/constellation/hierarchies/connectomist-1.0/: connectomist.py
brainvisa/toolboxes/constellation/hierarchies/shared/: constellation.py
brainvisa/toolboxes/constellation/new_processes/individual_pipelines/: constel_individual_pipeline.py  constel_individual_pipeline_fsl_connectome.py
brainvisa/toolboxes/constellation/new_processes/miscellaneous/: concatenate_roi_segmentations.py  constel_connectome_reduced.py  constel_fiber_lengths_histogram.py  constel_fiber_number_barchart.py  constel_generate_text_table.py  constel_merge_nuclei_white_mesh.py  extract_clusters.py  gyri_texture_cleaning_isolated_vertices.py  merge_labels_from_texture.py  write_matrix2csv.py
brainvisa/toolboxes/constellation/new_processes/viewers/: anatomistViewConnectivityTextureSmallBrain.py  anatomistViewConnmatrix.procdoc  anatomistViewReorderMatrix.py  anatomist_plotting_connectivity_profiles.py  anatomist_plotting_group_mask.py  anatomist_show_profiles_specific_element.py  anatomist_view_coloring_map.py
brainvisa/toolboxes/constellation/processes/: category_documentation.minf  constel_indiv_clusters_from_atlas_pipeline.procdoc  constel_indiv_clusters_from_atlas_pipeline.py  constel_indiv_clusters_from_atlas_pipeline_mrtrix.py  constel_individual_and_group_pipeline.procdoc  pipelineInterSubjects.py  pipelineIntraSubjects.py
brainvisa/toolboxes/constellation/processes/database_manipulation/: constel_group_qc_table.procdoc  constel_group_qc_table.py  constel_individual_qc_table.py
brainvisa/toolboxes/constellation/processes/group_pipeline/: constel_group_pipeline.procdoc  constel_group_pipeline.py
brainvisa/toolboxes/constellation/processes/individual_pipelines/: constel_individual_pipeline.procdoc  constel_individual_pipeline.py  constel_individual_pipeline_fsl_connectome.procdoc  constel_individual_pipeline_fsl_connectome.py  constel_individual_pipeline_mrtrix.py
brainvisa/toolboxes/constellation/processes/miscellaneous/: concatenate_roi_segmentations.py  constel_clean_clustering.py  constel_cleaner.py  constel_connectome_reduced.py  constel_cutter.py  constel_fiber_lengths_histogram.py  constel_fiber_number_barchart.py  constel_generate_text_table.py  constel_merge_nuclei_white_mesh.py  constel_optimal_clustering.py  constel_optimal_clustering_atlas.py  extract_clusters.py  gyri_texture_cleaning_isolated_vertices.py  merge_labels_from_texture.py  write_matrix2csv.py
brainvisa/toolboxes/constellation/processes/pipelines/: constel_group_pipeline.procdoc  constel_group_pipeline.py  constel_group_qc_table.py  constel_indiv_clusters_from_atlas_pipeline.procdoc  constel_indiv_clusters_from_atlas_pipeline.py  constel_individual_and_group_pipeline.procdoc  constel_individual_and_group_pipeline.py  constel_individual_pipeline.procdoc  constel_individual_pipeline.py  constel_individual_pipeline_fsl_connectome.py  constel_individual_pipeline_iterative_version.procdoc  constel_individual_pipeline_iterative_version.py  constel_individual_qc_table.py  constel_individual_subpipeline.py  pipelineBVIntraInterConstellation.py  pipelineInterBrainvisa.py  pipelineIntraBrainvisa.procdoc  pipelineIntraBrainvisa.py
brainvisa/toolboxes/constellation/processes/tools/: connectivityMatrixToAllCortexIntraSubjects.py  convertSparseMatrixToIma.procdoc  convertSparseMatrixToIma.py  gyriTextureCleaningIsolatedVertices.py  labelTextureGroup.py  mergeLabelsFromTexture.py
brainvisa/toolboxes/constellation/processes/viewers/: anatomistViewConnectivity.py  (+26 more)
brainvisa/toolboxes/constellation/types/: constellation_types.py  diffusion.py
scripts/: bv_get_constel_atlas.py
share-data/nomenclature/translation/: nomenclature_aal.txt  nomenclature_desikan_constellation.txt  nomenclature_desikan_freesurfer.txt  nomenclature_desikan_freesurfer_nuclei.txt  nomenclature_destrieux_freesurfer.txt  nomenclature_lausanne2008.txt  nomenclature_lobes.txt
soma-dev/: soma-recipe.yaml
soma-env/: soma-env-recipe.yaml
(+195 files in other folders)
